name:                kanaya-api
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              naoyoshi
maintainer:          naoyoshi0511@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable kanaya-api
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9,
                       monad-control,
                       monad-logger,
                       mtl,
                       text,
                       http-types,
                       scotty,
                       aeson,
                       persistent,
                       persistent-sqlite,
                       persistent-template
  hs-source-dirs:      src
  default-language:    Haskell2010
